--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*[[:space:]].psd filter=lfs diff=lfs merge=lfs -text
+*[[:space:]].png filter=lfs diff=lfs merge=lfs -text
+*[[:space:]].webm filter=lfs diff=lfs merge=lfs -text
+*[[:space:]].mp4 filter=lfs diff=lfs merge=lfs -text
+*[[:space:]].ogg filter=lfs diff=lfs merge=lfs -text
