--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *[[:space:]].webm filter=lfs diff=lfs merge=lfs -text
 *[[:space:]].mp4 filter=lfs diff=lfs merge=lfs -text
 *[[:space:]].ogg filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
